--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 
 dependencies:
   micro_core:
-    path: ../micro_core
+    git:
+      url: https://github.com/luiscovelo/-Curso-Micro-Core.git
+      ref: v1.0.0
 
   flutter:
     sdk: flutter
